--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Weather App</title>
+  <meta charset="UTF-8">
+  <title>Weather App</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Weather App</h1>
-    <input type="text" id="city" placeholder="Enter city name">
-    <button id="search">Search</button>
-    <div id="result"></div>
-    <script src="script.js"></script>
+  <div class="app-container">
+    <h1 class="title">🌤️ Weather App</h1>
+    
+    <div class="search-box">
+      <input type="text" id="city" placeholder="Enter city name">
+      <button id="search">Search</button>
+    </div>
+    
+    <div id="result" class="weather-card">
+      <p>Search for a city to see the weather.</p>
+    </div>
+  </div>
+  
+  <script src="script.js"></script>
 </body>
 </html>
